# cli

./: Dockerfile  README.md  pgenie-app.cabal  pgenie-cli.cabal  pgenie-client-app.cabal  stack.yaml
.github/workflows/: cd.yaml  on-push-to-dev.yaml  on-push-to-master.yaml  release.yaml
domain/: config.domain.yaml
pgn/: Main.hs
pgn-dev/: Main.hs
test/: Main.hs
