cabal-version: 3.0

name: pgenie-app
version: 1.0.0

common base-settings
  default-extensions: ApplicativeDo, Arrows, BangPatterns, BinaryLiterals, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, DerivingVia, DuplicateRecordFields, EmptyCase, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, HexFloatLiterals, LambdaCase, LiberalTypeSynonyms, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, NumericUnderscores, OverloadedLabels, OverloadedStrings, PatternGuards, PatternSynonyms, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UndecidableInstances, ViewPatterns
  default-language: Haskell2010
  build-depends:
    attoparsec,
    cereal,
    coalmine,
    domain,
    domain-aeson,
    domain-optics,
    directory,
    http-client,
    http-client-tls,
    lean-http-client,
    pgenie-client,
    pgenie-config,
    pgenie-protocol,
    rerebase,
    text-builder-dev,
    yaml-unscrambler,

common executable-settings
  import: base-settings
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N -I0 -qg"
  build-depends:
    optima,
    pgenie-app,

common test-settings
  import: base-settings
  build-depends:
    pgenie-app,

library
  import: base-settings
  hs-source-dirs: library
  exposed-modules:
    Pgenie.App

test-suite test
  import: test-settings
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs

executable pgn
  import: executable-settings
  hs-source-dirs: pgn
  main-is: Main.hs

-- Development version.
-- Assumes you have a valid HTTP server running locally
-- at port 27400.
executable pgn-dev
  import: executable-settings
  hs-source-dirs: pgn-dev
  main-is: Main.hs
