cabal-version: 3.0

name: pgenie-client-app
version: 0.1

common language-settings
  default-extensions: ApplicativeDo, Arrows, BangPatterns, BinaryLiterals, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, DerivingVia, DuplicateRecordFields, EmptyCase, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, HexFloatLiterals, LambdaCase, LiberalTypeSynonyms, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, NumericUnderscores, OverloadedLabels, OverloadedStrings, PatternGuards, PatternSynonyms, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UndecidableInstances, ViewPatterns
  default-language: Haskell2010

common executable-settings
  ghc-options: 
    -O2
    -threaded
    "-with-rtsopts=-N -I0 -qg"

library
  import: language-settings
  hs-source-dirs: library
  exposed-modules:
    Pgenie.ClientApp
  other-modules:
    Pgenie.ClientApp.Prelude
  build-depends:
    attoparsec,
    cereal,
    coalmine,
    domain,
    domain-aeson,
    domain-optics,
    directory,
    http-client,
    http-client-tls,
    lean-http-client,
    pgenie-client,
    pgenie-config,
    pgenie-protocol,
    rerebase,
    text-builder-dev,
    yaml-unscrambler,

test-suite test
  import: language-settings
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    coalmine,
    pgenie-client-app,
    rerebase,

executable pgn
  import: language-settings, executable-settings
  hs-source-dirs: pgn
  main-is: Main.hs
  build-depends:
    coalmine,
    optima,
    pgenie-client-app,
    rerebase,

-- Development version.
-- Assumes you have a valid HTTP server running locally
-- at port 27400.
executable pgn-dev
  import: language-settings, executable-settings
  hs-source-dirs: pgn-dev
  main-is: Main.hs
  build-depends:
    coalmine,
    optima,
    pgenie-client-app,
    rerebase,
